--- a/src/app-shell.html
+++ b/src/app-shell.html
@@ -147,8 +147,8 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
 
     <firebase-app
         auth-domain="gdg-es.firebaseapp.com"
-        database-url="https://gdg-es.firebaseio.com"
-        api-key="AIzaSyAIF5ALCsCSwKZhPqIIfwSOQPRrswB1Ovc"></firebase-app>
+        database-url="https://gdgmadrid-site.firebaseapp.com"
+        api-key="AIzaSyBmJHUsOQIZEMrXkH2qFURb0CH3k1YLmFg"></firebase-app>
 
     <app-header-layout>
       <app-header condenses reveals effects="waterfall" role="navigation">
@@ -162,7 +162,7 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
 
           <div class="logo-container">
             <a href="/" aria-label="GDG Madrid home">
-              <iron-image src="../images/gdgspain-logo.png" preload sizing="cover"></iron-image>
+              <iron-image src="../images/gdgmadrid-logo.png" preload sizing="cover"></iron-image>
             </a>
           </div>
 
