--- a/src/pages/home/page-home.html
+++ b/src/pages/home/page-home.html
@@ -27,7 +27,7 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
 
         color: white;
         background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-                          url('../../../images/gdgspain-summit-2015.jpg');
+                          url('../../../images/gdgmadrid-intro.jpg');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -173,7 +173,7 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
           <h3>¿Qué es el GDGmadrid?</h3>
           <div class="section-columns">
             <div class="section-description">
-              <p>Los <strong>Google Developer Groups</strong> (GDGs) son entidades sin ánimo de lucro creadas con el objetivo de mejorar la comunidad de entusiastas tecnológicos y aumentar el conocimiento y las relaciones entre las personas que se dedican a esta área.</p>
+              <p>Los <strong>Google Developer Group Madrid</strong> (GDGMadrid) es una entidad sin ánimo de lucro, creada con el objetivo de mejorar la comunidad de entusiastas tecnológicos y aumentar el conocimiento y las relaciones entre las personas que se dedican a esta área.</p>
             </div>
             <div class="gdg-logo">
               <iron-image src="../../../images/gdg-logo.png" preload></iron-image>
@@ -182,8 +182,8 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
           <h3>¿Qué hacemos?</h3>
           <div class="section-columns">
             <div class="section-description">
-              <p>Creamos eventos, conferencias y talleres en más de treinta puntos de España, con el ánimo de difundir el conocimiento sobre tecnología y mejorar el panorama desarrollador del país. Además, la gran mayoría de estos eventos son <strong>libres y gratuitos</strong>, pues creemos que el conocimiento no debe enfrentarse a mayor barrera que el interés del que quiere aprenderlo.</p>
-              <p>Los GDGs también tienen como objetivo la promoción de las relaciones entre expertos tecnológicos, por lo que colaboramos en la difusión de otras comunidades tecnológicas (GDE, Women Techmakers, Tech & Ladies, Betabeers, etc) para hacer de la tecnología en España un músculo fuerte y activo que contribuya al desarrollo de la sociedad.</p>
+              <p>Creamos eventos, conferencias y talleres en Madrid con caracter local y nacional, con el ánimo de difundir el conocimiento sobre tecnología y mejorar el panorama desarrollador del país. Además, la gran mayoría de estos eventos son <strong>libres y gratuitos</strong>, pues creemos que el conocimiento no debe enfrentarse a mayor barrera que el interés del que quiere aprenderlo.</p>
+              <p>El GDGMadrid también tienen como objetivo la promoción de las relaciones entre expertos tecnológicos, por lo que colaboramos en la difusión de otras comunidades tecnológicas (GDE, Women Techmakers, Tech & Ladies, Betabeers, etc) para hacer de la tecnología en España un músculo fuerte y activo que contribuya al desarrollo de la sociedad.</p>
             </div>
           </div>
         </div>
