--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 @license
-Copyright (c) 2016 The GDG Spain Authors. All rights reserved.
+Copyright (c) 2016 The GDG Madrid Authors. All rights reserved.
 This code may only be used under the MIT style license found at http://gdg.es/LICENSE.txt
 -->
 
@@ -10,7 +10,7 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>GDG Spain - Google Developer Groups Spain</title>
+    <title>GDG Madrid - Google Developer Groups Madrid</title>
     <meta name="description" content="Organización que agrupa a todos los Google Developer Groups de España.">
 
     <link rel="icon" href="/images/favicon.ico">
@@ -23,11 +23,11 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
 
     <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="GDG Spain">
+    <meta name="application-name" content="GDG Madrid">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="GDG Spain">
+    <meta name="apple-mobile-web-app-title" content="GDG Madrid">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Homescreen icons -->
@@ -41,24 +41,6 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
     <meta name="msapplication-TileImage" content="/images/manifest/icon-144x144.png">
     <meta name="msapplication-TileColor" content="#4285f4">
     <meta name="msapplication-tap-highlight" content="no">
-
-    <meta property="og:url" content="https://gdg.es">
-    <meta property="og:type" content="profile">
-    <meta property="og:title" content="GDG Spain">
-    <meta property="og:description" content="Organización que agrupa a todos los Google Developer Groups de España.">
-    <meta property="og:image" content="https://gdg.es/images/open-graph/gdg-spain-logo.png">
-
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@GDG_ES">
-    <meta name="twitter:title" content="GDG Spain">
-    <meta name="twitter:description" content="Organización que agrupa a todos los Google Developer Groups de España.">
-    <meta name="twitter:image" content="https://gdg.es/images/open-graph/gdg-spain-logo.png">
-    <meta name="twitter:image:alt" content="Logo of GDG Spain">
-
-    <link href="https://plus.google.com/+GDGSpain" rel="publisher">
-    <meta itemprop="name" content="GDG Spain">
-    <meta itemprop="description" content="Organización que agrupa a todos los Google Developer Groups de España.">
-    <meta itemprop="image" content="https://gdg.es/images/open-graph/gdg-spain-logo.png">
 
     <script>
       // Setup Polymer options
@@ -123,16 +105,6 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
   <body>
     <app-shell></app-shell>
 
-    <script>
-      /* eslint-disable */
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-71931980-3', 'auto');
-      ga('send', 'pageview');
-      /* eslint-enable */
-    </script>
+    <script src="/scripts/google-analytics.js"></script>
   </body>
 </html>
