--- a/src/pages/branding/page-branding.html
+++ b/src/pages/branding/page-branding.html
@@ -65,11 +65,11 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
     <h1>Branding</h1>
 
     <div class="description">
-      <p>En esta sección encontrarás recursos y material que pueden servirte de ayuda para escribir o informar sobre GDG Spain.</p>
+      <p>En esta sección encontrarás recursos y material que pueden servirte de ayuda para escribir o informar sobre GDG Madrid.</p>
     </div>
 
     <div id="transformedContent">
-      <paper-card heading="Fotografía: Organizadores de GDG Spain en el Summit de Zaragoza, celebrado en 2015">
+      <!--<paper-card heading="Fotografía: Organizadores de GDG Spain en el Summit de Zaragoza, celebrado en 2015">
         <iron-image src="../../../images/gdgspain-summit-2015.jpg"></iron-image>
         <div class="card-actions">
           <a href="../../../images/gdgspain-summit-2015.jpg" target="_blank"
@@ -78,11 +78,11 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
             <paper-button>Descargar foto</paper-button>
           </a>
         </div>
-      </paper-card>
+      </paper-card>-->
 
-      <paper-card heading="Logo de GDG Spain en diferentes formatos">
+      <paper-card heading="Logo de GDG Madrid en diferentes formatos">
         <div class="card-actions">
-          <a href="https://drive.google.com/file/d/0Bw6oydw_GTC9OGdvZTRGY1EtWm8/view"
+          <!--<a href="https://drive.google.com/file/d/0Bw6oydw_GTC9OGdvZTRGY1EtWm8/view"
               target="_blank"
               tabindex="-1"
               title="Descargar logo en formato .ai"
@@ -100,7 +100,7 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
               title="Descargar logo en formato .png (circular)"
               aria-label="Descargar logo en formato .png (circular)">
             <paper-button>Descargar en .png (circular)</paper-button>
-          </a>
+          </a>-->
         </div>
       </paper-card>
     </div>
