--- a/src/app-shared-elements/gdgmadrid-cascaded-animation.html
+++ b/src/app-shared-elements/gdgmadrid-cascaded-animation.html
@@ -1,17 +1,18 @@
 <!--
 @license
-Copyright (c) 2016 GDG Spain
+Copyright (c) 2016 GDG Madrid
 This code may only be used under the MIT style license found at LICENSE.txt
 -->
 
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/neon-animation/animations/cascaded-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/fade-in-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/fade-out-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/transform-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/neon-animation-runner-behavior.html">
 
 <script>
-  Polymer.GDGSpainAnimatePageImpl = {
+  Polymer.GDGMadridCascadedAnimationImpl = {
     properties: {
       animationConfig: {
         value: function() {
@@ -24,46 +25,23 @@ This code may only be used under the MIT style license found at LICENSE.txt
                 duration: 500
               }
             }, {
-              name: 'transform-animation',
-              node: this.$.transformedContent,
-              transformOrigin: '100%',
-              transformFrom: 'translateY(30%)',
-              transformTo: 'translateY(0%)',
+              name: 'cascaded-animation',
+              animation: 'transform-animation',
+              transformFrom: 'translateY(100%)',
+              transformTo: 'none',
               timing: {
                 delay: 200,
                 duration: 500
-              }
-            }],
-            'exit': [{
-              name: 'fade-out-animation',
-              node: this,
-              timing: {
-                delay: 0,
-                duration: 300
-              }
-            }, {
-              name: 'transform-animation',
-              node: this.$.transformedContent,
-              transformOrigin: '100%',
-              transformFrom: 'translateY(0%)',
-              transformTo: 'translateY(30%)',
-              timing: {
-                delay: 0,
-                duration: 200
               }
             }]
           }
         }
       }
-    },
-
-    ready: function() {
-      this.playAnimation('entry');
     }
   };
 
-  Polymer.GDGSpainAnimatePage = [
-    Polymer.GDGSpainAnimatePageImpl,
+  Polymer.GDGMadridCascadedAnimation = [
+    Polymer.GDGMadridCascadedAnimationImpl,
     Polymer.NeonAnimationRunnerBehavior
   ];
 </script>
