--- a/src/app-shared-styles.html
+++ b/src/app-shared-styles.html
@@ -1,6 +1,6 @@
 <!--
 @license
-Copyright (c) 2016 The GDG Spain Authors. All rights reserved.
+Copyright (c) 2016 The GDG Madrid Authors. All rights reserved.
 This code may only be used under the MIT style license found at http://gdg.es/LICENSE.txt
 -->
 
