--- a/src/pages/404/page-404.html
+++ b/src/pages/404/page-404.html
@@ -5,7 +5,7 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
 -->
 
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../app-shared-elements/gdgspain-animate-page.html">
+<link rel="import" href="../../app-shared-elements/gdgmadrid-animate-page.html">
 <link rel="import" href="../../app-shared-styles.html">
 
 <dom-module id="page-404">
@@ -30,7 +30,7 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
       is: 'page-404',
 
       behaviors: [
-        Polymer.GDGSpainAnimatePage
+        Polymer.GDGMadridAnimatePage
       ]
     });
   </script>
