--- a/src/pages/home/page-home.html
+++ b/src/pages/home/page-home.html
@@ -173,7 +173,7 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
           <h3>¿Qué es el GDGmadrid?</h3>
           <div class="section-columns">
             <div class="section-description">
-              <p>Los <strong>Google Developer Group Madrid</strong> (GDGMadrid) es una entidad sin ánimo de lucro, creada con el objetivo de mejorar la comunidad de entusiastas tecnológicos y aumentar el conocimiento y las relaciones entre las personas que se dedican a esta área.</p>
+              <p>El <strong>Google Developer Group Madrid</strong> (GDGMadrid) es una entidad sin ánimo de lucro, creada con el objetivo de mejorar la comunidad de entusiastas tecnológicos y aumentar el conocimiento y las relaciones entre las personas que se dedican a esta área.</p>
             </div>
             <div class="gdg-logo">
               <iron-image src="../../../images/gdg-logo.png" preload></iron-image>
