--- a/src/app-shell.html
+++ b/src/app-shell.html
@@ -1,6 +1,6 @@
 <!--
 @license
-Copyright (c) 2016 The GDG Madrid Authors. All rights reserved.
+Copyright (c) 2016 The GDG Spain Authors. All rights reserved.
 This code may only be used under the MIT style license found at http://gdg.es/LICENSE.txt
 -->
 
@@ -147,8 +147,8 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
 
     <firebase-app
         auth-domain="gdg-es.firebaseapp.com"
-        database-url="https://gdgmadrid-site.firebaseapp.com"
-        api-key="AIzaSyBmJHUsOQIZEMrXkH2qFURb0CH3k1YLmFg"></firebase-app>
+        database-url="https://gdg-es.firebaseio.com"
+        api-key="AIzaSyAIF5ALCsCSwKZhPqIIfwSOQPRrswB1Ovc"></firebase-app>
 
     <app-header-layout>
       <app-header condenses reveals effects="waterfall" role="navigation">
@@ -161,8 +161,8 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
               aria-label="Sections"></paper-icon-button>
 
           <div class="logo-container">
-            <a href="/" aria-label="GDG Madrid home">
-              <iron-image src="../images/gdgmadrid-logo.png" preload sizing="cover"></iron-image>
+            <a href="/" aria-label="GDG Spain home">
+              <iron-image src="../images/gdgspain-logo.png" preload sizing="cover"></iron-image>
             </a>
           </div>
 
@@ -174,8 +174,14 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
               <paper-tab name="home" link tabindex="-1">
                 <a href="/">Inicio</a>
               </paper-tab>
+              <paper-tab name="groups" link tabindex="-1">
+                <a href="/groups">Grupos</a>
+              </paper-tab>
+              <paper-tab name="events" link tabindex="-1">
+                <a href="/events">Eventos</a>
+              </paper-tab>
               <paper-tab name="blog" link tabindex="-1">
-                <a href="http://devfest.gdgmadrid.com/" target="_blank">DevFest</a>
+                <a href="http://blog.gdg.es" target="_blank">Blog</a>
               </paper-tab>
               <paper-tab name="branding" link tabindex="-1">
                 <a href="/branding">Branding</a>
@@ -191,6 +197,8 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
           selected-attribute="visible"
           fallback-selection="404">
         <page-home name="home"></page-home>
+        <page-groups name="groups"></page-groups>
+        <page-events name="events"></page-events>
         <page-branding name="branding"></page-branding>
         <page-404 name="404"></page-404>
       </neon-animated-pages>
@@ -206,7 +214,9 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
               class="drawer-menu"
               role="navigation">
             <a name="home" href="/">Inicio</a>
-            <a name="blog" href="http://devfest.gdgmadrid.com/">DevFest</a>
+            <a name="groups" href="/groups">Grupos</a>
+            <a name="events" href="/events">Eventos</a>
+            <a name="blog" href="http://blog.gdg.es">Blog</a>
             <a name="branding" href="/branding">Branding</a>
           </iron-selector>
         </div>
