--- a/src/pages/home/page-home.html
+++ b/src/pages/home/page-home.html
@@ -6,7 +6,7 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
 
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="../../app-shared-elements/gdgmadrid-animate-page.html">
+<link rel="import" href="../../app-shared-elements/gdgspain-animate-page.html">
 <link rel="import" href="../../app-shared-styles.html">
 
 <dom-module id="page-home">
@@ -27,7 +27,7 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
 
         color: white;
         background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-                          url('../../../images/gdgmadrid-intro.jpg');
+                          url('../../../images/gdgspain-summit-2015.jpg');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -165,15 +165,16 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
 
     <div id="transformedContent">
       <header>
-        <h1>Google Developer Group Madrid</h1>
+        <h1>Google Developer Group Spain</h1>
+        <h2>Organización que agrupa a todos los Google Developer Groups de España</h2>
       </header>
 
       <section class="what-are-the-gdgs">
         <div class="section-content">
-          <h3>¿Qué es el GDGmadrid?</h3>
+          <h3>¿Qué son los GDGs?</h3>
           <div class="section-columns">
             <div class="section-description">
-              <p>Los <strong>Google Developer Group Madrid</strong> (GDGMadrid) es una entidad sin ánimo de lucro, creada con el objetivo de mejorar la comunidad de entusiastas tecnológicos y aumentar el conocimiento y las relaciones entre las personas que se dedican a esta área.</p>
+              <p>Los <strong>Google Developer Groups</strong> (GDGs) son entidades sin ánimo de lucro creadas con el objetivo de mejorar la comunidad de entusiastas tecnológicos y aumentar el conocimiento y las relaciones entre las personas que se dedican a esta área.</p>
             </div>
             <div class="gdg-logo">
               <iron-image src="../../../images/gdg-logo.png" preload></iron-image>
@@ -182,8 +183,8 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
           <h3>¿Qué hacemos?</h3>
           <div class="section-columns">
             <div class="section-description">
-              <p>Creamos eventos, conferencias y talleres en Madrid con caracter local y nacional, con el ánimo de difundir el conocimiento sobre tecnología y mejorar el panorama desarrollador del país. Además, la gran mayoría de estos eventos son <strong>libres y gratuitos</strong>, pues creemos que el conocimiento no debe enfrentarse a mayor barrera que el interés del que quiere aprenderlo.</p>
-              <p>El GDGMadrid también tienen como objetivo la promoción de las relaciones entre expertos tecnológicos, por lo que colaboramos en la difusión de otras comunidades tecnológicas (GDE, Women Techmakers, Tech & Ladies, Betabeers, etc) para hacer de la tecnología en España un músculo fuerte y activo que contribuya al desarrollo de la sociedad.</p>
+              <p>Creamos eventos, conferencias y talleres en más de treinta puntos de España, con el ánimo de difundir el conocimiento sobre tecnología y mejorar el panorama desarrollador del país. Además, la gran mayoría de estos eventos son <strong>libres y gratuitos</strong>, pues creemos que el conocimiento no debe enfrentarse a mayor barrera que el interés del que quiere aprenderlo.</p>
+              <p>Los GDGs también tienen como objetivo la promoción de las relaciones entre expertos tecnológicos, por lo que colaboramos en la difusión de otras comunidades tecnológicas (GDE, Women Techmakers, Tech & Ladies, Betabeers, etc) para hacer de la tecnología en España un músculo fuerte y activo que contribuya al desarrollo de la sociedad.</p>
             </div>
           </div>
         </div>
@@ -192,26 +193,47 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
       <footer>
         <section class="footer-media-links">
           <div class="section-content">
-            <a href="https://twitter.com/gdgmadrid"
+            <a href="https://twitter.com/GDG_ES"
                 target="_blank"
-                title="Seguir @GDGMadrid en Twitter"
+                title="Seguir @GDG_ES en Twitter"
                 aria-label="Seguir GDG Spain en Twitter">
               <iron-icon icon="twitter"></iron-icon>
-              <span>@GDGMadrid</span>
+              <span>@GDG_ES</span>
             </a>
-            <a href="https://github.com/gdgmadrid"
+            <a href="https://github.com/GDGSpain"
                 target="_blank"
-                title="Seguir /GDGMadrid en GitHub"
-                aria-label="Seguir GDG Madrid en GitHub">
+                title="Seguir /GDGSpain en GitHub"
+                aria-label="Seguir GDG Spain en GitHub">
               <iron-icon icon="github"></iron-icon>
-              <span>/GDGMadrid</span>
+              <span>/GDGSpain</span>
             </a>
-            <a href="https://plus.google.com/+GDGMadridOrg"
+            <a href="https://www.youtube.com/c/GDGSpain"
                 target="_blank"
-                title="Seguir +GDGMadrid en Google+"
-                aria-label="Seguir GDG Madrid en Google+">
+                title="Suscribirse /GDGSpain en YouTube"
+                aria-label="Suscribirse GDG Spain en YouTube">
+              <iron-icon icon="youtube"></iron-icon>
+              <span>/GDGSpain</span>
+            </a>
+            <a href="https://www.facebook.com/GDGSpain"
+                target="_blank"
+                title="Seguir /GDGSpain en Facebook"
+                aria-label="Seguir GDG Spain en Facebook">
+              <iron-icon icon="facebook"></iron-icon>
+              <span>/GDGSpain</span>
+            </a>
+            <a href="https://instagram.com/GDGSpain"
+                target="_blank"
+                title="Seguir /GDGSpain en Instagram"
+                aria-label="Seguir GDG Spain en Instagram">
+              <iron-icon icon="instagram"></iron-icon>
+              <span>/GDGSpain</span>
+            </a>
+            <a href="https://plus.google.com/+GDGSpain"
+                target="_blank"
+                title="Seguir +GDGSpain en Google+"
+                aria-label="Seguir GDG Spain en Google+">
               <iron-icon icon="googlePlus"></iron-icon>
-              <span>GDGMadrid</span>
+              <span>GDGSpain</span>
             </a>
           </div>
         </section>
@@ -234,7 +256,7 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
       },
 
       behaviors: [
-        Polymer.GDGMadridAnimatePage
+        Polymer.GDGSpainAnimatePage
       ],
 
       _visibleChanged: function(visible) {
