--- a/src/pages/home/page-home.html
+++ b/src/pages/home/page-home.html
@@ -164,85 +164,63 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
     </style>
 
     <div id="transformedContent">
-      <header>
-        <h1>Google Developer Group Spain</h1>
-        <h2>Organización que agrupa a todos los Google Developer Groups de España</h2>
-      </header>
+        <header>
+          <h1>Google Developer Group Madrid</h1>
+        </header>
 
-      <section class="what-are-the-gdgs">
-        <div class="section-content">
-          <h3>¿Qué son los GDGs?</h3>
-          <div class="section-columns">
-            <div class="section-description">
-              <p>Los <strong>Google Developer Groups</strong> (GDGs) son entidades sin ánimo de lucro creadas con el objetivo de mejorar la comunidad de entusiastas tecnológicos y aumentar el conocimiento y las relaciones entre las personas que se dedican a esta área.</p>
-            </div>
-            <div class="gdg-logo">
-              <iron-image src="../../../images/gdg-logo.png" preload></iron-image>
-            </div>
-          </div>
-          <h3>¿Qué hacemos?</h3>
-          <div class="section-columns">
-            <div class="section-description">
-              <p>Creamos eventos, conferencias y talleres en más de treinta puntos de España, con el ánimo de difundir el conocimiento sobre tecnología y mejorar el panorama desarrollador del país. Además, la gran mayoría de estos eventos son <strong>libres y gratuitos</strong>, pues creemos que el conocimiento no debe enfrentarse a mayor barrera que el interés del que quiere aprenderlo.</p>
-              <p>Los GDGs también tienen como objetivo la promoción de las relaciones entre expertos tecnológicos, por lo que colaboramos en la difusión de otras comunidades tecnológicas (GDE, Women Techmakers, Tech & Ladies, Betabeers, etc) para hacer de la tecnología en España un músculo fuerte y activo que contribuya al desarrollo de la sociedad.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <footer>
-        <section class="footer-media-links">
+        <section class="what-are-the-gdgs">
           <div class="section-content">
-            <a href="https://twitter.com/GDG_ES"
-                target="_blank"
-                title="Seguir @GDG_ES en Twitter"
-                aria-label="Seguir GDG Spain en Twitter">
-              <iron-icon icon="twitter"></iron-icon>
-              <span>@GDG_ES</span>
-            </a>
-            <a href="https://github.com/GDGSpain"
-                target="_blank"
-                title="Seguir /GDGSpain en GitHub"
-                aria-label="Seguir GDG Spain en GitHub">
-              <iron-icon icon="github"></iron-icon>
-              <span>/GDGSpain</span>
-            </a>
-            <a href="https://www.youtube.com/c/GDGSpain"
-                target="_blank"
-                title="Suscribirse /GDGSpain en YouTube"
-                aria-label="Suscribirse GDG Spain en YouTube">
-              <iron-icon icon="youtube"></iron-icon>
-              <span>/GDGSpain</span>
-            </a>
-            <a href="https://www.facebook.com/GDGSpain"
-                target="_blank"
-                title="Seguir /GDGSpain en Facebook"
-                aria-label="Seguir GDG Spain en Facebook">
-              <iron-icon icon="facebook"></iron-icon>
-              <span>/GDGSpain</span>
-            </a>
-            <a href="https://instagram.com/GDGSpain"
-                target="_blank"
-                title="Seguir /GDGSpain en Instagram"
-                aria-label="Seguir GDG Spain en Instagram">
-              <iron-icon icon="instagram"></iron-icon>
-              <span>/GDGSpain</span>
-            </a>
-            <a href="https://plus.google.com/+GDGSpain"
-                target="_blank"
-                title="Seguir +GDGSpain en Google+"
-                aria-label="Seguir GDG Spain en Google+">
-              <iron-icon icon="googlePlus"></iron-icon>
-              <span>GDGSpain</span>
-            </a>
+            <h3>¿Qué es el GDGmadrid?</h3>
+            <div class="section-columns">
+              <div class="section-description">
+                <p>El <strong>Google Developer Group Madrid</strong> (GDGMadrid) es una entidad sin ánimo de lucro, creada con el objetivo de mejorar la comunidad de entusiastas tecnológicos y aumentar el conocimiento y las relaciones entre las personas que se dedican a esta área.</p>
+              </div>
+              <div class="gdg-logo">
+                <iron-image src="../../../images/gdg-logo.png" preload></iron-image>
+              </div>
+            </div>
+            <h3>¿Qué hacemos?</h3>
+            <div class="section-columns">
+              <div class="section-description">
+                <p>Creamos eventos, conferencias y talleres en Madrid con caracter local y nacional, con el ánimo de difundir el conocimiento sobre tecnología y mejorar el panorama desarrollador del país. Además, la gran mayoría de estos eventos son <strong>libres y gratuitos</strong>, pues creemos que el conocimiento no debe enfrentarse a mayor barrera que el interés del que quiere aprenderlo.</p>
+                <p>El GDGMadrid también tienen como objetivo la promoción de las relaciones entre expertos tecnológicos, por lo que colaboramos en la difusión de otras comunidades tecnológicas (GDE, Women Techmakers, Tech & Ladies, Betabeers, etc) para hacer de la tecnología en España un músculo fuerte y activo que contribuya al desarrollo de la sociedad.</p>
+              </div>
+            </div>
           </div>
         </section>
-        <section class="footer-bottom">
 
-        </section>
-      </footer>
-    </div>
-  </template>
+        <footer>
+          <section class="footer-media-links">
+            <div class="section-content">
+              <a href="https://twitter.com/gdgmadrid"
+                  target="_blank"
+                  title="Seguir @GDGMadrid en Twitter"
+                  aria-label="Seguir GDG Spain en Twitter">
+                <iron-icon icon="twitter"></iron-icon>
+                <span>@GDGMadrid</span>
+              </a>
+              <a href="https://github.com/gdgmadrid"
+                  target="_blank"
+                  title="Seguir /GDGMadrid en GitHub"
+                  aria-label="Seguir GDG Madrid en GitHub">
+                <iron-icon icon="github"></iron-icon>
+                <span>/GDGMadrid</span>
+              </a>
+              <a href="https://plus.google.com/+GDGMadridOrg"
+                  target="_blank"
+                  title="Seguir +GDGMadrid en Google+"
+                  aria-label="Seguir GDG Madrid en Google+">
+                <iron-icon icon="googlePlus"></iron-icon>
+                <span>GDGMadrid</span>
+              </a>
+            </div>
+          </section>
+          <section class="footer-bottom">
+
+          </section>
+        </footer>
+      </div>
+    </template>
 
   <script>
     Polymer({
