--- a/src/app-shell.html
+++ b/src/app-shell.html
@@ -146,9 +146,9 @@ This code may only be used under the MIT style license found at http://gdg.es/LI
         query-matches="{{smallScreen}}"></iron-media-query>
 
     <firebase-app
-        auth-domain="gdg-es.firebaseapp.com"
-        database-url="https://gdg-es.firebaseio.com"
-        api-key="AIzaSyAIF5ALCsCSwKZhPqIIfwSOQPRrswB1Ovc"></firebase-app>
+        auth-domain="gdgmadrid-site.firebaseapp.com"
+        database-url="https://gdgmadrid-site.firebaseio.com"
+        api-key="AIzaSyCogko3BsyEszKqIHao3DLQ4oNDw_O-uyc"></firebase-app>
 
     <app-header-layout>
       <app-header condenses reveals effects="waterfall" role="navigation">
